--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<title>
   This website
-</head>
+</title>
 <body>Hello World </body>
 <style>
   body{
-    background-color=green;
+    background-color:green;
   </style>
 </html>
