--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<html>
 <title>
   This website
 </title>
-<body>Hello World </body>
+  <body><h1>Hello World</h1> </body>
 <style>
   body{
     background-color:green;
